language/tests/error/TypeError05.sl
toeminto piä() {
  f = 1 < 2;
  f();  
}  
